--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ chrono = { version = "0.4.19", features = ["serde"] }
 serde_json = "1.0.60"
 serde_derive = "1.0.118"
 serde = { version = "1.0", features = ["derive"] }
+
+structopt = "0.3"
