--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,6 @@ serde_derive = "1.0.118"
 serde = { version = "1.0", features = ["derive"] }
 
 structopt = "0.3"
+
+diesel = { version = "1.4.4", features = ["postgres"] }
+dotenv = "0.15.0"
