--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,9 @@ serde = { version = "1.0", features = ["derive"] }
 
 structopt = "0.3"
 
-diesel = { version = "1.4.4", features = ["postgres"] }
+diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
 dotenv = "0.15.0"
+
+bcrypt = "0.8"
+
+itertools = "0.10"
